<com.n3vr0s.aubergine.app.screens.screen2.sub1.Screen2Sub1RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fragment 1"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            
            <EditText
                android:id="@+id/etAddendA"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"/>

            <EditText
                android:id="@+id/etAddendB"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="="/>

            <TextView
                android:id="@+id/tvSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Calculate"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnNextScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Go to next example"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        />


</com.n3vr0s.aubergine.app.screens.screen2.sub1.Screen2Sub1RelativeLayout>